# clash-finite

./: CHANGELOG.md  LICENSE  README.md  cabal.project  clash-finite.cabal
src/Clash/Class/: Finite.hs
src/Clash/Class/Finite/: Internal.hs
src/Clash/Class/Finite/Internal/: Evidence.hs  TH.hs
tests/: Main.hs
tests/Clash/Tests/Laws/: Finite.hs
